# downloader

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOWNLOADER_BUG.md  Dockerfile  MONITORING_IMPLEMENTATION.md  Makefile  PLAN.md  README.md  SECURITY.md  batch_results_97389df3.json  batch_results_d316a620.json  docker-compose.prod.yml  docker-compose.yml  justfile  llms.txt  pyproject.toml  pytest.ini  recommendation.md  recommendations.md  refactor.md  run.py  run_examples.sh
.clinerules/: AGENTS.md  project_structure.md
.github/workflows/: ci.yml
doc/: CONFIGURATION_MANAGEMENT.md  README.md  api-reference.md
docs/: MAINTENANCE.md  README.md  roadmap.md
docs/api/: api-reference.md
docs/archive/: BUG_FIX_SUMMARY.md  DOWNLOADER_BUG.md  README.md  TEST_RESULTS.md
docs/features/: browser-rendering.md  content-transformation.md  downloader-core.md  infrastructure.md  production-readiness.md  scheduling.md
docs/guides/: configuration.md  deployment.md  monitoring.md  scheduling.md
examples/: README.md  basic_usage.py  batch_job_example.py  batch_processing.py  concurrent_pdf_requests.py  content_formats.py
monitoring/: README.md  docker-compose.monitoring.yml  grafana-dashboard.json  prometheus.yml
product/: PRD.md  TEST_REFACTORING_PLAN.md  architecture.md  metrics.md  personas.md  roadmap.md  user-journeys.md
scripts/: test_all.sh  test_coverage.sh  test_smoke.sh
src/downloader/: __init__.py  api.py  auth.py  config.py  content_converter.py  dependencies.py  http_client.py  job_manager.py  logging_config.py  main.py  metrics.py  middleware.py  pdf_generator.py  ratelimit_middleware.py  validation.py
src/downloader/browser/: __init__.py  manager.py
src/downloader/models/: __init__.py  responses.py  schedule.py
src/downloader/routes/: batch.py  download.py  metrics.py  schedules.py
src/downloader/scheduler/: __init__.py  executor.py  service.py  storage.py
src/downloader/services/: content_processor.py
src/downloader/transformers/: __init__.py  markdown.py  plaintext.py
tests/: README.md  conftest.py  test_api.py  test_auth.py  test_browser_manager.py  test_http_client.py  test_job_manager.py  test_metrics.py  test_middleware.py  test_pdf_generator.py  test_pdf_generator_browser_pool.py  test_pdf_generator_core.py  test_pdf_generator_global.py  test_rate_limiting.py  test_ssrf_protection.py  test_validation.py
tests/api/: test_batch.py  test_batch_auth.py  test_batch_processing.py  test_batch_validation.py  test_content_conversion.py  test_download.py  test_health.py  test_jobs.py  test_metrics.py  test_multi_format.py
tests/e2e/: conftest.py  docker-compose.yml  test_examples.py  test_html_rendering_e2e.py
tests/fixtures/: __init__.py  api_fixtures.py  data_fixtures.py  env_fixtures.py  html_fixtures.py  mock_fixtures.py
tests/integration/: test_batch_processing.py  test_browser_rendering.py  test_browser_security.py  test_html_rendering.py  test_pdf_download.py  test_pdf_generation.py  test_scheduler.py
tests/smoke/: __init__.py  test_auth.py  test_rate_limiting.py  test_server_startup.py  test_validation.py
tests/unit/: test_html_rendering.py  test_http_client.py  test_markdown_transformer.py  test_plaintext_transformer.py  test_scheduler.py
