[project]
name = "downloader"
version = "0.3.0"
description = "REST API Downloader - High-performance web service for programmatic URL content downloading"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx[http2]>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "python-json-logger>=2.0.0",
    "beautifulsoup4>=4.13.5",
    "markdownify>=0.11.0",
    "lxml>=6.0.1",
    "playwright>=1.40.0",
    "redis>=5.0.0",
    "slowapi>=0.1.9",
    "brotli>=1.2.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E722",  # Bare except
    "B008",  # Function call in argument defaults (FastAPI Depends pattern)
    "B904",  # Exception chaining
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
# Baseline config - catches import errors and major type issues
# Stricter checking can be enabled incrementally per-module

[[tool.mypy.overrides]]
module = [
    "downloader.main",
    "downloader.routes.batch",
    "downloader.routes.download",
    "downloader.routes.metrics",
    "downloader.services.content_processor",
    "downloader.job_manager",
    "downloader.config",
    "downloader.logging_config",
    "downloader.browser.manager",
    "downloader.middleware",
    "downloader.pdf_generator",
    "downloader.http_client",
    "downloader.metrics",
]
ignore_errors = true

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pytest-benchmark>=5.1.0",
    "pre-commit>=4.3.0",
    "pip-audit>=2.7.0",
    "detect-secrets>=1.5.0",
]
